--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ body{
 
 /* FORMULARIO -*****************************************/
 
-form{
+.form-container{
     margin-top: 1.5rem;
     padding: 1.5rem;
     background-color: #222222;
@@ -53,28 +53,25 @@ form{
     -webkit-box-shadow: 0px 0px 14px 8px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 14px 8px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 14px 8px rgba(0,0,0,0.75);
+    width: 60vh;
 }
 
-.register__label{
+.form-container-item{
     display: block;
     width: 100%;
     color: white;
-}
-
-.register__input-name, .register__input-mail, 
-.register__input-password, .register__input-age {
-    width: 100%;
-    padding: 6px;
-    border-radius: 4px;
     margin-bottom: 1rem;
+}
+
+.input-form-register {
+    width: 100%;
+    padding: 8px ;
+    border-radius: 3px;
     color: #1844d5;
-}
+    border: none;
+}   
 
-.register__label{
-    padding-bottom: .1rem;
-}
-
-.register__country{
+.born-country-container__country{
     width: 100%;
     padding: 5px;
     margin-bottom: 1rem;
@@ -84,6 +81,14 @@ form{
     padding: 1rem;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
+}
+
+.therms-container{
+    margin-bottom: 1rem;
+}
+
+.therms-container__label{
+    margin-left: 0.5rem;
 }
 
 .sex-container__label{
@@ -112,3 +117,10 @@ footer{
 }
 
 /* FIN FOOTER -****************************************/
+
+
+@media only screen and (max-width: 600px) {
+    .form-container{
+        width: 90vh;
+    }
+  }
